--- a/日常软件.md
+++ b/日常软件.md
@@ -38,6 +38,12 @@
 
 
 
+### Trae CN
+
+官网：https://www.trae.cn/
+
+
+
 ## 接口调试
 
 ### Apifox
@@ -87,6 +93,58 @@
 ### PicGo
 
 官网：https://github.com/Molunerfinn/PicGo/releases
+
+
+
+## 版本管理
+
+### TortoiseSVN
+
+官网：https://tortoisesvn.net/
+
+
+
+### Git
+
+官网：https://git-scm.com/
+
+
+
+### Sourcetree
+
+官网：https://www.sourcetreeapp.com/
+
+
+
+## 其他
+
+### nvm-windows
+
+官网：https://github.com/coreybutler/nvm-windows
+
+
+
+### JDK
+
+JDK8：https://www.oracle.com/java/technologies/javase/javase8u211-later-archive-downloads.html
+
+JDK21：https://download.oracle.com/java/21/latest/jdk-21_windows-x64_bin.exe
+
+
+
+### RDM
+
+RedisInsight
+
+官网：https://github.com/redis/RedisInsight
+
+
+
+AnotherRedisDesktopManager
+
+官网：https://github.com/qishibo/AnotherRedisDesktopManager
+
+
 
 
 
@@ -194,9 +252,9 @@ https://7-zip.org/
 
 ## 影视
 
+### PotPlayer
 
-
-### 暴风影音
+下载：https://t1.daumcdn.net/potplayer/PotPlayer/Version/Latest/PotPlayerSetup64.exe
 
 
 
@@ -245,6 +303,12 @@ https://7-zip.org/
 
 
 
+### FinalShell
+
+官网：https://www.hostbuf.com/
+
+
+
 ## 远程控制
 
 ### 向日葵
@@ -260,6 +324,44 @@ https://7-zip.org/
 
 
 ## 其他
+
+### 掌中世界
+
+下载：https://154.37.216.229/d/%E5%AE%98%E6%96%B9APP/Windows/%E6%8E%8C%E4%B8%AD%E4%B8%96%E7%95%8C%20Setup%201.5.6.exe?sign=3OwvObvHCt1YNlV_ZaXk8F9UMolU0tnpaVmUYW3K9v4=:0
+
+
+
+### Typora v0.11.18
+
+下载：https://down.wsyhn.com/23_259635
+
+
+
+### Sublime Text
+
+官网：https://www.sublimetext.com/
+
+
+
+### VMware Workstation Pro 17
+
+下载： https://api.ddooo.com/down/197461/42  
+
+密钥：JU090-6039P-08409-8J0QH-2YR7F
+
+
+
+### 雷电模拟器
+
+官网：https://www.ldmnq.com/
+
+
+
+### 爱思助手
+
+官网：https://www.i4.cn/
+
+
 
 ### Total Control 安卓设备-pc屏幕交互
 
