--- a/日常软件.md
+++ b/日常软件.md
@@ -291,9 +291,13 @@ https://7-zip.org/
 
 ### FileZilla 文件上传
 
+官网：https://filezilla-project.org/
 
 
-### Xshell7
+
+### Xshell
+
+官网：https://www.xshell.com/zh/free-for-home-school/
 
 
 
@@ -306,6 +310,12 @@ https://7-zip.org/
 ### FinalShell
 
 官网：https://www.hostbuf.com/
+
+
+
+### MobaXterm
+
+官网：https://mobaxterm.mobatek.net/
 
 
 
