--- a/日常软件.md
+++ b/日常软件.md
@@ -387,6 +387,50 @@ https://7-zip.org/
 
 
 
+## 装机
+
+```
+Google Chrome   https://www.google.com/chrome
+Visual Studio Code  https://code.visualstudio.com
+git  https://git-scm.com/
+TortoiseSVN  https://tortoisesvn.net/
+nvm-windows  https://github.com/coreybutler/nvm-windows
+7-zip  https://7-zip.org/
+百度输入法  https://shurufa.baidu.com/default
+微信  https://weixin.qq.com/
+掌中世界  https://154.37.216.229/d/%E5%AE%98%E6%96%B9APP/Windows/%E6%8E%8C%E4%B8%AD%E4%B8%96%E7%95%8C%20Setup%201.5.6.exe?sign=3OwvObvHCt1YNlV_ZaXk8F9UMolU0tnpaVmUYW3K9v4=:0
+Sourcetree  https://www.sourcetreeapp.com/
+HBuilder X  https://www.dcloud.io/hbuilderx.html
+微信开发者工具  https://developers.weixin.qq.com/miniprogram/dev/devtools/stable.html
+支付宝小程序开发工具  https://opendocs.alipay.com/mini/ide/download
+Trae CN  https://www.trae.cn/
+Typora  https://down.wsyhn.com/23_259635
+Sublime Text  https://www.sublimetext.com/
+jdk8   https://www.oracle.com/java/technologies/javase/javase8u211-later-archive-downloads.html
+jdk21  https://download.oracle.com/java/21/latest/jdk-21_windows-x64_bin.exe
+Android Studio  https://developer.android.google.cn/studio
+IntelliJ IDEA 2024.1.2  https://www.jetbrains.com/idea
+Navicat 15 for MySQL  https://www.navicat.com
+oss-browser  https://help.aliyun.com/zh/oss/developer-reference/install-and-log-on-to-ossbrowser
+PicGo  https://github.com/Molunerfinn/PicGo/releases
+PotPlayer 64 bit  https://t1.daumcdn.net/potplayer/PotPlayer/Version/Latest/PotPlayerSetup64.exe
+RedisInsight   https://github.com/redis/RedisInsight
+AnotherRedisDesktopManager  https://github.com/qishibo/AnotherRedisDesktopManager
+Snipaste  https://www.snipaste.com
+FinalShell  https://www.hostbuf.com/
+FastStone Capture  https://www.faststone.org/FSCaptureDetail.htm
+ToDesk  https://www.todesk.com
+向日葵远程控制  https://sunlogin.oray.com/
+VMware Workstation Pro17  https://www.ddooo.com/softdown/197461.htm  密钥：JU090-6039P-08409-8J0QH-2YR7F
+WPS Office  https://www.wps.cn/
+雷电模拟器  https://www.ldmnq.com/
+阿里云盘  https://www.alipan.com/
+爱思助手8.0(64位)  https://www.i4.cn/
+迅雷  https://www.xunlei.com/
+Beyond_Compare  https://www.scootersoftware.com
+Xshell 7 --- Xmanager Power Suite 7  https://www.xshell.com/zh/
+```
+
 
 
 
