--- a/自定义组件.md
+++ b/自定义组件.md
@@ -4,7 +4,7 @@
 
 ## 仿微信语音播放动效
 
-![image-20240410182455208](https://www.huangyihui.cn/upload/gburlimg/f6b818451238b.png)
+![image-20240410182455208](http://qiniu.huangyihui.cn/doc/202511262305695.png)
 
 ```vue
 <template>
