--- a/设计与开发技巧.md
+++ b/设计与开发技巧.md
@@ -108,11 +108,11 @@ https://github.com/typicode/json-server
 
 
 
-![image-20230116131251985](https://www.huangyihui.cn/upload/gburlimg/e2f2f5ad67b2d.png)
+![image-20230116131251985](http://qiniu.huangyihui.cn/doc/202511262304290.png)
 
 
 
-![image-20230116131321704](https://www.huangyihui.cn/upload/gburlimg/bb37adfec9046.png)
+![image-20230116131321704](http://qiniu.huangyihui.cn/doc/202511262304445.png)
 
 
 
