--- a/日常软件.md
+++ b/日常软件.md
@@ -116,6 +116,45 @@
 
 
 
+## 反编译
+
+### Apktool
+
+Apktool 是一款用于逆向工程第三方、封闭、二进制、Android 应用的工具。
+
+文档：https://github.com/iBotPeaches/Apktool
+
+
+
+使用：
+
+首先，确保你已经安装了 Java，因为 `APKTool` 需要 Java 环境运行。
+
+**Windows**: 下载 APKTool 的 JAR 文件和 Windows 安装包（`apktool.bat`）。将 `apktool.jar` 和 `apktool.bat` 放在同一个目录下。
+
+```sh
+# 将 APK 文件反编译成可编辑的文件（smali 代码、资源文件等）
+apktool d app.apk
+
+# 将修改后的文件夹重新编译成 APK 文件
+apktool b app
+
+# 将修改后的 APK 文件安装到 Android 设备上，确保你已经通过 adb 配置好设备连接
+adb install app.apk
+```
+
+
+
+### JADX
+
+jadx - Dex 转 Java 反编译器。用于从 Android Dex 和 Apk 文件生成 Java 源代码。
+
+文档：https://github.com/skylot/jadx
+
+
+
+
+
 ## 其他
 
 ### nvm-windows
